<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_vpn_key"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_proxies"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_proxies" />
    <item
        android:id="@+id/nav_pricing"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_pricing" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />
</menu>
